--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "daisyui": "^2.46.0",
+    "i18next": "^22.4.6",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.1",
     "react-router-dom": "^6.6.1",
     "theme-change": "^2.2.0"
   },
